testdata/test/resources/com/yafred/asn1/test/should_fail/choice_undistinct_tagging.asn
-- FAIL
Choices-3 DEFINITIONS ::=
BEGIN

A ::= CHOICE {
   b NULL,
   c NULL
}

END

